TestCases/Errors/Haversine/observations/sst/aut_05_obs.spm
obs r15-c5 0.000342231348391513
obs r16-c5 0.000684462696783025
obs r15-c6 0.00166425434321095
obs r16-c6 0.000651688623052743
obs r17-c6 0.000298855497670041
obs r18-c6 0.000171680284060994
obs r19-c6 8.60585197934596e-05
obs r16-c7 0.000155860349127182
obs r9-c12 0.024
obs r11-c12 0.00375
obs r6-c13 0.0258823529411765
obs r9-c13 0.024
obs r5-c14 0.00105263157894737
obs r6-c14 0.0258823529411765
obs r8-c14 0.00493827160493827
obs r5-c15 0.0059919028340081
obs r6-c15 0.0223360692937073
obs r9-c18 1e-08
obs r9-c19 0.0145756514808222
obs r9-c20 0.0455733073038354
obs r10-c20 0.0264906480385609
obs r11-c20 0.0116666666666667
error_value r15-c5 0.2
error_value r16-c5 0.2
error_value r15-c6 0.2
error_value r16-c6 0.2
error_value r17-c6 0.2
error_value r18-c6 0.2
error_value r19-c6 0.2
error_value r16-c7 0.2
error_value r9-c12 0.2
error_value r11-c12 0.2
error_value r6-c13 0.2
error_value r9-c13 0.2
error_value r5-c14 0.2
error_value r6-c14 0.2
error_value r8-c14 0.2
error_value r5-c15 0.2
error_value r6-c15 0.2
error_value r9-c18 0.2
error_value r9-c19 0.2
error_value r9-c20 0.2
error_value r10-c20 0.2
error_value r11-c20 0.2
